syntax="proto3";

service BizingoRpc{
    rpc SendCoord(Casa) returns (Mensagem) {}
    rpc SendMessage(Mensagem) returns (Mensagem) {}
    rpc GameOver(Flag) returns (Mensagem) {}
    rpc ResetRequest(Flag) returns (Flag) {}
    rpc ResetJogo(Flag) returns (Flag) {}
    rpc FecharConexao(Flag) returns (Mensagem) {}
    rpc MandarDialog(Mensagem) returns (Mensagem) {}
    rpc Conectar(MensagemConexao) returns (MensagemConexao) {}
    rpc ConectarDevolta(MensagemConexao) returns (Flag) {}
}

message MensagemConexao {
    string ipLocal = 1;
    string ipRemoto = 2;
    int32 portaLocal = 3;
    int32 portaRemota = 4;
    string meuNome = 5;
}

message Casa{
    int32 x = 1;
    int32 y = 2;
}
message Mensagem{
    string m = 1;
}
message Flag{
    bool g = 1;
}
message IntFlag{
    int32 i = 1;
}